[package]
name = "pumpr-staking"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
spl-token = "3.2.0"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
assert_matches = "1.5.0"
bincode = "1.3.3"
solana-sdk = "1.7.11"
solana-program-test = "1.7.11"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
bytemuck = "1.4.0"